ui/src/index.css
/* ... */
@media (min-width: 768px) {
  /* main {
    margin-bottom: 500px;
  }

  .site-footer {
       position: fixed;
      min-height: 270px;
  } */

  .kgs-navbar {
    height: 100px;
  }

  .navbar-right { 
    margin-top: 25px;
    margin-bottom: -15px;
  }

  .container-fluid>.navbar-collapse {
    margin-right: -15px;
    margin-left: -15px; 
  }

  .site-footer .footer__header {
    display: flex;
  }

  .site-footer .footer__header .footer__secondary {
    display: inline-block;
    padding-bottom: 0;
  }

  .site-footer .footer__header .footer__secondary .powered-by {
    margin-right: 0;
  }

  .site-footer .footer__content .footer__menu {
    flex-basis: 20%;
  }

  .navbar-header .logo {
    margin: -15px auto 0 0;
  }

  #rootFooter {
    position: relative;
    margin-top: 0;
    margin-bottom: 15px;
  }

}

.logo {
  display: inline-block; 
  margin: -25px auto 0 0;
  color: var(--color-1);
  min-width: 200px;
}

.logo img {
  display: inline-block;
}

.logo svg {
  height: 100%;
  min-width: 160px;
}

body[theme="dark"] .logo:after {
  content: "EBRAINS";
  display: inline-block;
  font-size: 19px;
  font-weight: 600;
  padding-right: 10px;
  transform: translate(-87px, 2px);
  background: var(--background-color-2);
  color: var(--color-10);
  -webkit-font-smoothing: auto;
}

.eu-logo {
  position: relative;
}

body[theme="dark"] .eu-logo:after {
  content: "Co-funded by\A the European Union";
  display: inline-block;
  font-size: 15px;
  background: var(--background-color-2);
  color: var(--color-10);
  -webkit-font-smoothing: auto;
  white-space: pre;
  position: absolute;
  top: 20px;
  left: 3px;
  line-height: 1.4em;
  letter-spacing: 0.04em;
  text-align: right;
}

#rootFooter {
  position: absolute;
  right: var(--site-margin);
  margin-top: 20px;
  width: 100%;
}

#rootFooter > div {
  position: relative;
  text-align: right;
}

